# semche

./: .env.example  .gitignore  AGENTS.md  README.md  TASK4_VERIFICATION.md  package-lock.json  package.json  pyproject.toml  semche.spec.md  tsconfig.json  vitest.config.ts
.cursor/: README.md  mcp-dev.json  mcp.json
chroma_db/: chroma.sqlite3
src/: config.ts  index.ts  index.ts.exp.md
src/semche/: __init__.py  chromadb_manager.py  chromadb_manager.py.exp.md  embedding.py  embedding.py.exp.md  hybrid_retriever.py  hybrid_retriever.py.exp.md  mcp_server.py  mcp_server.py.exp.md  sparse_encoder.py  sparse_encoder.py.exp.md
src/semche/cli/: __init__.py  bulk_register.py  bulk_register.py.exp.md
src/semche/tools/: __init__.py  delete.py  delete.py.exp.md  document.py  document.py.exp.md  get_by_prefix.py  get_by_prefix.py.exp.md  hello.py  hello.py.exp.md  search.py  search.py.exp.md
src/utils/: logger.ts  logger.ts.exp.md  textSplitter.ts  textSplitter.ts.exp.md  vectorStore.ts  vectorStore.ts.exp.md
story/: chromadb_managerのqueryはlangchainのsimilarity_searchを使用する.md  ドキュメント登録機能をMCPから実行できる.md  ユーザーはCLIでドキュメントを一括登録できる.md  ユーザーはCLIの一括登録時に相対パスではなく、絶対パスでも登録できる.md  ユーザーはMCPでセマンティック検索できる.md  ユーザーはMCPで本機能を実行できる.md  ユーザーはchromaDBのSQLiteを利用して、ファイルパスの前方一致でドキュメントを取得できる.md  ユーザーはsearchで取得するのは500文字までではなく全文取得できる.md  ユーザーはドキュメントを削除することができる.md  ユーザーはベクトルデータをChromaDBに保存できる.md  ユーザーはベクトルデータを出力できる.md  ユーザーは類似性検索を廃止して代わりにハイブリット検索ができるようになる.md
tasks/: 01-project-setup.md  02-env-setup.md  03-vectorstore-init.md  04-mcp-server-setup.md  05-index-tool.md  06-search-tool.md  07-delete-tool.md  08-collection-info-tool.md  09-mcp-resources.md  10-mcp-prompts.md  11-file-watcher.md  12-error-handling.md  13-test-suite.md  14-documentation.md  15-deployment.md  16-final-check.md
tests/: __init__.py  conftest.py  mcpServer.test.ts  test_chromadb_manager.py  test_cli_bulk_register.py  test_delete.py  test_embedding.py  test_embedding_helper.py  test_mcp_server.py  test_search.py  test_sparse_encoder.py  vectorStore.test.ts
