[project]
name = "semche"
version = "0.1.0"
description = "MCP Server for vector search functionality"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "langchain>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mcp[cli]>=0.9.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semche"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["semche"]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
no_implicit_optional = false
strict_optional = false
show_error_codes = true
pretty = true
